# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

library("fidl") {
  sdk = "source"
  sdk_headers = [
    "lib/fidl/cpp/builder.h",
    "lib/fidl/cpp/message.h",
    "lib/fidl/cpp/message_buffer.h",
    "lib/fidl/cpp/message_builder.h",
    "lib/fidl/cpp/message_part.h",
    "lib/fidl/cpp/string_view.h",
    "lib/fidl/cpp/vector_view.h",
    "lib/fidl/llcpp/array_wrapper.h",
    "lib/fidl/llcpp/decoded_message.h",
    "lib/fidl/llcpp/encoded_message.h",
    "lib/fidl/llcpp/traits.h",
    "lib/fidl/coding.h",
    "lib/fidl/epitaph.h",
    "lib/fidl/internal.h",
    "lib/fidl/transport.h",
  ]
  sources = [
    "builder.cpp",
    "decoding.cpp",
    "encoding.cpp",
    "epitaph.c",
    "formatting.cpp",
    "handle_closing.cpp",
    "message.cpp",
    "message_buffer.cpp",
    "message_builder.cpp",
    "transport.cpp",
    "validating.cpp",
  ]
  configs += [ "$zx/public/gn/config:visibility_hidden" ]
  deps = [
    "$zx/system/ulib/async",
    "$zx/system/ulib/fit",
    "$zx/system/ulib/zircon",
  ]
}
