# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

library("trace") {
  sdk = "static"
  sdk_headers = [
    "trace/internal/event_args.h",
    "trace/internal/event_common.h",
    "trace/internal/event_internal.h",
    "trace/internal/pairs_internal.h",
    "trace/event.h",
    "trace/event_args.h",
    "trace/observer.h",
  ]
  sources = [
    "event.cpp",
    "observer.cpp",
  ]
  public_deps = [
    # <trace/internal/event_common.h> has #include <trace-engine/instrumentation.h>.
    "$zx/system/ulib/trace-engine:headers",
  ]
  configs += [ "$zx/public/gn/config:visibility_hidden" ]
  deps = [
    "$zx/system/ulib/async",
    "$zx/system/ulib/async:async-cpp",
    "$zx/system/ulib/fbl",
    "$zx/system/ulib/trace-engine",
    "$zx/system/ulib/zircon",
    "$zx/system/ulib/zx",
  ]
}
