# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

driver("bma253") {
  sources = [
    "bma253.cpp",
  ]
  deps = [
    "$zx/system/banjo/ddk-protocol-clk",
    "$zx/system/banjo/ddk-protocol-gpio",
    "$zx/system/banjo/ddk-protocol-hidbus",
    "$zx/system/banjo/ddk-protocol-i2c",
    "$zx/system/banjo/ddk-protocol-platform-device",
    "$zx/system/ulib/ddk",
    "$zx/system/ulib/ddktl",
    "$zx/system/ulib/fbl",
    "$zx/system/ulib/fit",
    "$zx/system/ulib/hid",
    "$zx/system/ulib/simplehid",
    "$zx/system/ulib/sync",
    "$zx/system/ulib/zircon",
    "$zx/system/ulib/zx",
    "$zx/system/ulib/zxcpp",
  ]
}
