# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

library("mock-i2c") {
  testonly = true
  sources = [
    "mock-i2c.cpp",
  ]
  deps = [
    "$zx/system/ulib/ddk",
    "$zx/system/ulib/ddktl",
    "$zx/system/ulib/fbl",
    "$zx/system/ulib/unittest",
    "$zx/system/ulib/zx",
  ]
}
